objects/DM_Repayment_Schedule_Summary__c.object
<CustomObject>
    <fields>
        <fullName>DM_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Amount_Type__c</fullName>
        <label>DM Amount Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>DM_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>DM_FIXED AMOUNT</fullName>
                </value>
                <value>
                    <fullName>DM_LAST BILLED AMOUNT</fullName>
                </value>
                <value>
                    <fullName>DM_CURRENT PAYMENT AMOUNT</fullName>
                </value>
                <value>
                    <fullName>DM_OLDEST UNPAID BILL AMOUNT</fullName>
                </value>
                <value>
                    <fullName>DM_TOTAL OUTSTANDING BILL AMOUNT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_Apply_NSF_on_Attempt__c</fullName>
        <inlineHelpText>Select attempt number/s on which NSF is to be charged</inlineHelpText>
        <label>DM Apply NSF on Attempt</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DM_0</fullName>
                </value>
                <value>
                    <fullName>DM_1</fullName>
                </value>
                <value>
                    <fullName>DM_2</fullName>
                </value>
                <value>
                    <fullName>DM_3</fullName>
                </value>
                <value>
                    <fullName>DM_4</fullName>
                </value>
                <value>
                    <fullName>DM_5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Selection indicates that this record can be archived. This is automatically updated by the system. Do no update it manually.</inlineHelpText>
        <label>DM Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Barcode_Subtype__c</fullName>
        <label>DM Barcode Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>128A</fullName>
                </value>
                <value>
                    <fullName>128B</fullName>
                </value>
                <value>
                    <fullName>128C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_CL_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DM CL Contract</label>
        <referenceTo>DM_Loan_Account__c</referenceTo>
        <relationshipLabel>DM Repayment Schedule</relationshipLabel>
        <relationshipName>DM_Repayment_Schedule_Summarys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DM_Consider_disbursed_LoanAmt_Princi__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Consider Disbursed Loan Amt Princi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Consider_disbursed_LoanAmt_Principal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Consider Disbursed Loan Amt Principal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Consider_total_Loan_Amount_Principal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Consider Total Loan Amount Principal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Consider_total_Loan_Amt_Principal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Consider Total Loan Amount Principal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Custom_Field_10__c</fullName>
        <label>DM Custom Field 7</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Custom_Field_1__c</fullName>
        <label>DM Custom Field 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Custom_Field_2__c</fullName>
        <label>DM Custom Field 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Debit_Date__c</fullName>
        <label>DM Debit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Debit_Day__c</fullName>
        <label>DM Debit Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_External_Id__c</fullName>
        <label>DM External Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Frequency_Cycle__c</fullName>
        <label>DM Frequency Cycle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Frequency__c</fullName>
        <label>DM Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>DM_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>DM_Daily</fullName>
                </value>
                <value>
                    <fullName>DM_Weekly</fullName>
                </value>
                <value>
                    <fullName>DM_Bi-weekly</fullName>
                </value>
                <value>
                    <fullName>DM_Semi-Monthly</fullName>
                </value>
                <value>
                    <fullName>DM_Monthly</fullName>
                </value>
                <value>
                    <fullName>DM_Bi-Monthly</fullName>
                </value>
                <value>
                    <fullName>DM_Quarterly</fullName>
                </value>
                <value>
                    <fullName>DM_Semi-Annual</fullName>
                </value>
                <value>
                    <fullName>DM_Annual</fullName>
                </value>
                <value>
                    <fullName>DM_Single-Payment</fullName>
                </value>
                <value>
                    <fullName>DM_Semi-Monthly-PD</fullName>
                </value>
                <value>
                    <fullName>DM_Billing Frequency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_Installment_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines whether this is installment payment or not</description>
        <inlineHelpText>This field determines whether this is installment payment or not</inlineHelpText>
        <label>DM Installment Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Only_Summary_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Interest Only Summary Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Last_Repayment_Start_Date_on_req__c</fullName>
        <label>DM Last Repayment Start Date on req</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Loan_Disbursal_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Repayment Schedule Record of which LDT</description>
        <inlineHelpText>This field is used only in case of FIT (Fund in Tranches) Loans. Every disbursal re-generates repayment schedule, this field keeps track of parent disbursal due to which record is created.</inlineHelpText>
        <label>DM Loan Disbursal Transaction</label>
        <referenceTo>DM_Loan_Disbursal_Transaction__c</referenceTo>
        <relationshipName>DM_Loan_Disbursal_Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DM_Master_Archive_Object__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Selection indicates that this is a master object record containing one or more child object records. Master object records may be archived but are not deleted by the system. This is automatically updated by the system. Do not update it manually.</inlineHelpText>
        <label>DM Master Archive Object</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Number_of_Retry_Attempts__c</fullName>
        <inlineHelpText>How many times a payment should be retried.</inlineHelpText>
        <label>DM Number of Retry Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Other_Loan_Transaction__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>DM Other Loan Transaction</label>
        <referenceTo>loan__Other_Transaction__c</referenceTo>
        <relationshipLabel>Repayment Schedule</relationshipLabel>
        <relationshipName>Repayment_Schedule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DM_Pending_Retry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Pending Retry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_RSS_Contract_flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Contractual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_RSS_ID__c</fullName>
        <label>DM ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_RSS_No_Of_Pmts__c</fullName>
        <label>DM Number Of Payments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_RSS_Primary_flag__c</fullName>
        <defaultValue>true</defaultValue>
        <label>DM Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_RSS_Repayment_Amt__c</fullName>
        <label>DM Repayment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_RSS_Repayment_Dt__c</fullName>
        <label>DM Repayment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_RSS_Seq__c</fullName>
        <label>DM Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_RSS_System_Generated_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Recurring_ACH_End_Date__c</fullName>
        <label>DM Recurring ACH End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Recurring_ACH_Start_Date__c</fullName>
        <label>DM Recurring ACH Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Repayment_Start_Date_on_Request__c</fullName>
        <label>DM Repayment Start Date on Request</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Retry_Attempt_Interval__c</fullName>
        <inlineHelpText>Number of days between two retry attempts. These number of days are considered after rejection date.</inlineHelpText>
        <label>DM Retry Attempt Interval (in days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Retry__c</fullName>
        <inlineHelpText>If enabled, we will retry a rejected payment as per the retry configuration.</inlineHelpText>
        <label>DM Retry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DM_Enabled</fullName>
                </value>
                <value>
                    <fullName>DM_Disabled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_Return_Codes_for_Retry__c</fullName>
        <inlineHelpText>Select the return codes for which we want to retry payments.</inlineHelpText>
        <label>DM Return Codes for Retry</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DM_R01</fullName>
                </value>
                <value>
                    <fullName>DM_R09</fullName>
                </value>
                <value>
                    <fullName>DM_X0</fullName>
                </value>
                <value>
                    <fullName>DM_X</fullName>
                </value>
                <value>
                    <fullName>DM_0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_Second_Debit_Date__c</fullName>
        <label>DM Second Debit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Setup_Date__c</fullName>
        <label>DM Setup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Summary_Record_Id__c</fullName>
        <inlineHelpText>The ID of the summary transaction record within which this record is summarized. This is automatically generated by the system. Do no update it manually.</inlineHelpText>
        <label>DM Summary Record Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Summary__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Selection indicates that the record is a summary transaction record for data archival purpose. This is automatically updated by the system. Do no update it manually.</inlineHelpText>
        <label>DM Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Transaction_Amount__c</fullName>
        <label>DM Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Type__c</fullName>
        <label>DM Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DM_RECURRING</fullName>
                </value>
                <value>
                    <fullName>DM_ONE TIME</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_number_months_before_repayment_starts__c</fullName>
        <label>DM Number Months Before Repayment Starts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_number_of_months_before_repay_starts__c</fullName>
        <label>DM Number Of Months Before Repay Starts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DM Repayment Schedule</label>
    <nameField>
        <label>DM Amortization Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DM Repayment Schedule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>